--- a/test.ini
+++ b/test.ini
@@ -8,5 +8,5 @@ from=gonepostal001@gmail.com
 [imap]
 server=imap.gmail.com
 port=993
-user=gonepostal003gmail.com
+user=gonepostal003@gmail.com
 password=thisisnotsecret
