--- a/configs/gmail3.ini
+++ b/configs/gmail3.ini
@@ -1,9 +1,12 @@
+[email]
+address=gonepostal003@gmail.com
+
 [smtp]
 server=smtp.gmail.com
 port=587
-user=gonepostal001@gmail.com
+user=gonepostal003@gmail.com
 password=thisisnotsecret
-from=gonepostal001@gmail.com
+from=gonepostal003@gmail.com
 
 [imap]
 server=imap.gmail.com
