--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-GI_TYPELIB_PATH=./deps
-LD_LIBRARY_PATH=./deps
+GI_TYPELIB_PATH=./deps:/usr/lib/gobject-introspection
+LD_LIBRARY_PATH=./deps:/usr/lib
+LD_PRELOAD=./deps/libnice.so
