--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-GI_TYPELIB_PATH=./deps:/usr/lib/gobject-introspection
-LD_LIBRARY_PATH=./deps:/usr/lib
-LD_PRELOAD=./deps/libnice.so
+GI_TYPELIB_PATH=./libnice/agent
+LD_PRELOAD=./libnice/nice/.libs/libnice.so
